DASH-3803 [Frontend][Provisioning] Add Force sync option

--- a/src/components/integration/appsco-integration-settings.html
+++ b/src/components/integration/appsco-integration-settings.html
@@ -185,7 +185,8 @@
                 this._showLoader();
                 var form = event.target,
                     integrationKind = this.$.appscoIntegrationForm.getIntegrationKind(),
-                    integrationScheduleSync = this.$.appscoIntegrationForm.getIntegrationScheduleSync();
+                    integrationScheduleSync = this.$.appscoIntegrationForm.getIntegrationScheduleSync(),
+                    integrationForceSync = this.$.appscoIntegrationForm.getIntegrationForceSync();
 
                 form.request.method = 'PUT';
 
@@ -193,6 +194,8 @@
                     integrationKind ? integrationKind : '';
                 form.request.body['activate_integration[scheduleSyncInterval]'] =
                     integrationScheduleSync ? integrationScheduleSync : '';
+                form.request.body['activate_integration[forceSyncInterval]'] =
+                    integrationForceSync ? integrationForceSync : '';
             },
 
             _onFormError: function(event) {
