DASH-3800 [Frontend][Dashboard] Page settings icon color

--- a/src/components/application/appsco-application-actions.html
+++ b/src/components/application/appsco-application-actions.html
@@ -171,6 +171,9 @@ Custom property | Description | Default
                 height: 18px;
                 margin-right: 8px;
             }
+            :host paper-icon-button.config-icon {
+                color: #414042
+            }
         </style>
 
         <template is="dom-if" if="[[ _showOptions ]]">
