DASH-3817 [Frontend][Dashboard] Share button does not react on first click

--- a/src/components/application/appsco-application-item.html
+++ b/src/components/application/appsco-application-item.html
@@ -118,7 +118,9 @@ Custom property | Description | Default
                  */
                 application: {
                     type: Object,
-                    value: {},
+                    value: function () {
+                        return {};
+                    },
                     observer: '_onApplicationChanged'
                 },
 
