DASH-3824 [Frontend][Access Onboarding] Change button text

--- a/src/components/access-on-boarding/appsco-access-on-boarding-roles-item.html
+++ b/src/components/access-on-boarding/appsco-access-on-boarding-roles-item.html
@@ -193,7 +193,7 @@
 
                 <div class="list-actions">
                     <paper-button class="resolve-action"
-                                  on-tap="_onResolveSelectedAction">Resolve selected</paper-button>
+                                  on-tap="_onResolveSelectedAction">Mark as resolved</paper-button>
                 </div>
             </div>
         </iron-collapse>
