--- a/src/components/report/appsco-policy-report-roles.html
+++ b/src/components/report/appsco-policy-report-roles.html
@@ -156,7 +156,7 @@
                         var itemsLength = policies.length;
 
                         if (0 === itemsLength) {
-                            this._showMessage('There are no accounts with asked filters.');
+                            this._showMessage('There are no broken policies for the selected filter.');
                             this._handleEmptyLoad();
                             return false;
                         }
@@ -209,7 +209,7 @@
                         }
 
                         if (0 === this._listItems.length) {
-                            this._showMessage('There are no accounts with asked term.');
+                            this._showMessage('There are no broken policies with asked term.');
                             this._handleEmptyLoad();
                             return false;
                         }
