--- a/src/components/components/appsco-list-behavior.html
+++ b/src/components/components/appsco-list-behavior.html
@@ -208,6 +208,7 @@
         },
 
         reloadItems: function() {
+            this._setListApiRequestUrl(this._listApi);
             this._loadItems();
         },
 
