--- a/src/components/integration/appsco-add-integration-rule.html
+++ b/src/components/integration/appsco-add-integration-rule.html
@@ -326,11 +326,17 @@
                                  class="input-container" hidden$="[[ !_paramsVisible ]]">
                                 <p>Set default values that should be applied in affected object</p>
                                 <div class="input-container-title">Fields:</div>
-                                <template is="dom-repeat" items="[[ _toParamsList ]]">
-                                    <div class="input-container">
-                                        <paper-input label="[[ item.key ]]" value="{{ item.value }}"></paper-input>
-                                    </div>
-                                </template>
+
+                                <div class="input-container">
+                                    <template is="dom-repeat" items="[[ _toParamsList ]]">
+                                        <template is="dom-if" if="[[ item.options ]]">
+                                            <suggestion-combo-box label="[[ item.key ]]" value="{{ item.value }}" options="[[ item.options ]]" ></suggestion-combo-box>
+                                        </template>
+                                        <template is="dom-if" if="[[ !item.options ]]">
+                                            <paper-input label="[[ item.key ]]" value="{{ item.value }}"></paper-input>
+                                        </template>
+                                    </template>
+                                </div>
                             </div>
                         </template>
 
@@ -895,10 +901,11 @@
                 this._toPSOList.forEach(function(element) {
 
                     if (selectedItem === element.key) {
-                        this.set('_toParamsList', element.params.map(function(element) {
+                        this.set('_toParamsList', element.params.map(function(el, index) {
                             return {
-                                key: element,
-                                value: ''
+                                key: el,
+                                value: '',
+                                options: (element.target_options[el] && element.target_options[el].length ? element.target_options[el] : null)
                             };
                         }));
                         return false;
