DASH-3879 [Clearsense] Implement support for OpenID as IDP

--- a/src/components/application/appsco-application-item.html
+++ b/src/components/application/appsco-application-item.html
@@ -235,6 +235,9 @@ Custom property | Description | Default
                     case 'none':
                         return 'Link';
 
+                    case 'open_id':
+                        return 'Open ID';
+
                     default:
                         return 'Application';
                 }
