DASH-3884 [OpenID] Add discovery route and expand OpenID resource settings with entity id field

--- a/src/components/application/appsco-application-form-open-id.html
+++ b/src/components/application/appsco-application-form-open-id.html
@@ -21,6 +21,15 @@
     </style>
     <template>
         <paper-input
+                id="issuer"
+                data-field
+                label="Issuer"
+                value="[[ claims.issuer ]]"
+                name$="[[ claimsNamePrefix ]][issuer]"
+                error-message="Please enter issuer"
+        ></paper-input>
+
+        <paper-input
                 id="redirectUri"
                 data-field
                 label="Redirect URI"
