DASH-3859 [Provisioning] Add available groups drop-down to advanced settings

--- a/src/components/combo-box/suggestion-combo-box.html
+++ b/src/components/combo-box/suggestion-combo-box.html
@@ -222,6 +222,9 @@
 
             _onFilterPanelBlur: function() {
                 setTimeout(function() {
+                    if (this.$$('#searchPanelInput').contains(document.activeElement)) {
+                        return;
+                    }
                     this.animationConfig.entry.node.style.display = 'none';
                     this.playAnimation('exit');
                 }.bind(this), 300);
