DASH-3886 Rename group option

--- a/src/components/group/appsco-company-group-item.html
+++ b/src/components/group/appsco-company-group-item.html
@@ -125,6 +125,7 @@ Custom property | Description | Default
                 </div>
 
                 <div class="actions">
+                    <paper-button on-tap="_onRenameGroupAction">Rename</paper-button>
                     <paper-button on-tap="_onEditItemAction">Edit</paper-button>
                 </div>
             </div>
@@ -296,6 +297,13 @@ Custom property | Description | Default
                 if (this.noAutoDisplay && rolesLoaded && resourcesLoaded && contactsLoaded) {
                     this._showItem();
                 }
+            },
+
+            _onRenameGroupAction: function(event) {
+                event.stopPropagation();
+                this.fire('group-rename', {
+                    group: this.item
+                });
             }
         });
     </script>
