--- a/src/components/application/appsco-application-details.html
+++ b/src/components/application/appsco-application-details.html
@@ -100,11 +100,13 @@ Custom property | Description | Default
 
         <template is="dom-if" if="[[ _unPwAuth ]]" restamp>
             <appsco-application-details-unpw
+                    company="[[ application.application.company ]]"
                     claims="[[ application.claims ]]"
             ></appsco-application-details-unpw>
         </template>
         <template is="dom-if" if="[[ _itemAuth ]]" restamp>
             <appsco-application-details-unpw
+                    company="[[ application.application.company ]]"
                     claims="[[ application.claims ]]"
             ></appsco-application-details-unpw>
         </template>
@@ -115,6 +117,7 @@ Custom property | Description | Default
         </template>
         <template is="dom-if" if="[[ _loginAuth ]]" restamp>
             <appsco-application-details-unpw
+                    company="[[ application.application.company ]]"
                     claims="[[ application.claims ]]"
             ></appsco-application-details-unpw>
         </template>
