--- a/src/components/group/appsco-company-rename-group.html
+++ b/src/components/group/appsco-company-rename-group.html
@@ -106,7 +106,10 @@
                 },
 
                 group: {
-                    type: Object
+                    type: Object,
+                    value: function() {
+                        return {};
+                    }
                 },
 
                 apiErrors: {
