DASH-3901 Copy password in resource info section missing

--- a/src/components/application/appsco-application-details-unpw.html
+++ b/src/components/application/appsco-application-details-unpw.html
@@ -94,9 +94,8 @@
             },
 
             _computeShowPassword: function(company, claims) {
-                return company
-                    && (!company.disable_resource_copy_button)
-                    && claims.password;
+                return !company
+                    || (!company.disable_resource_copy_button && claims.password);
             }
         });
     </script>
