--- a/src/components/application/appsco-application-details-unpw.html
+++ b/src/components/application/appsco-application-details-unpw.html
@@ -94,8 +94,10 @@
             },
 
             _computeShowPassword: function(company, claims) {
-                return !company
-                    || (!company.disable_resource_copy_button && claims.password);
+                return company && company.disable_resource_copy_button ?
+                    false :
+                    claims.password
+                ;
             }
         });
     </script>
